Don't arm watcher in WebDataConsumerHandleImpl until it's fully read

WebDataConsumerHandle::DidGetReadable is expected to be called when it "stops to
wait for data". However, WebDataConsumerHandleImpl::DidGetReadable is called
when it's "ready to be read". It caused excessive calls of DidGetReadable and
results CPU hogging during streaming the data.

Bug: 843811
Change-Id: I213f4b5cb7004b4ae21aaedda229a7bc16d0c68b
Reviewed-on: https://chromium-review.googlesource.com/1062985
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Makoto Shimazu <shimazu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559483}
Former-commit-id: 621a73dfd5f9ef0928664e43b7c788eba981bb96